<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_idAñademela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Nombre"
        app:layout_constraintEnd_toStartOf="@+id/et_id"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_graduacion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_graduacion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Fecha2"
        app:layout_constraintEnd_toStartOf="@+id/et_graduacion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_origen2" />

    <TextView
        android:id="@+id/tv_origen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_origen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_graduacion2"
        app:layout_constraintEnd_toStartOf="@+id/et_origen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Color" />

    <TextView
        android:id="@+id/tv_Color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_origen2"
        app:layout_constraintEnd_toStartOf="@+id/et_color"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Bodega1" />

    <TextView
        android:id="@+id/tv_Bodega1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bodega"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Color"
        app:layout_constraintEnd_toStartOf="@+id/et_bodega"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Nombre" />

    <TextView
        android:id="@+id/tv_Fecha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha "
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btadd"
        app:layout_constraintEnd_toStartOf="@+id/et_fecha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_graduacion2" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_id"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_idAñademela"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_bodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_bodega"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_Bodega1"
        app:layout_constraintTop_toBottomOf="@+id/et_Nombre"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_color"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_origen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_Color"
        app:layout_constraintTop_toBottomOf="@+id/et_bodega"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_origen"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_graduacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_origen2"
        app:layout_constraintTop_toBottomOf="@+id/et_color"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_graduacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_graduacion"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/et_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_graduacion2"
        app:layout_constraintTop_toBottomOf="@+id/et_origen"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_fecha"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_Fecha2"
        app:layout_constraintTop_toBottomOf="@+id/et_graduacion"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="62dp"
        android:text="ADD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <TextView
        android:id="@+id/tv_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Bodega1"
        app:layout_constraintEnd_toStartOf="@+id/et_Nombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_idAñademela" />

    <EditText
        android:id="@+id/et_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_Nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_bodega"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_Nombre"
        app:layout_constraintTop_toBottomOf="@+id/et_id"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>