<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_id"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_nombre"
        app:layout_constraintEnd_toStartOf="@+id/tv_id2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_delete2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <Button
        android:id="@+id/bt_delete2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="78dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_nombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Bodega"
        app:layout_constraintEnd_toStartOf="@+id/et_nombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_Bodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_bodega"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_color"
        app:layout_constraintEnd_toStartOf="@+id/et_bodega"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_origen"
        app:layout_constraintEnd_toStartOf="@+id/et_color"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Bodega" />

    <TextView
        android:id="@+id/tv_origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_origen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_graduacion"
        app:layout_constraintEnd_toStartOf="@+id/et_origen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_color" />

    <TextView
        android:id="@+id/tv_graduacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_graduacion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_fecha"
        app:layout_constraintEnd_toStartOf="@+id/et_graduacion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_origen" />

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_fecha"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_fecha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_graduacion" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_bodega"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_nombre"
        app:layout_constraintTop_toBottomOf="@+id/tv_id2"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_bodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_Bodega"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_origen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_color"
        app:layout_constraintTop_toBottomOf="@+id/et_bodega"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_graduacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_origen"
        app:layout_constraintTop_toBottomOf="@+id/et_color"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_graduacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/et_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_graduacion"
        app:layout_constraintTop_toBottomOf="@+id/et_origen"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_fecha"
        app:layout_constraintTop_toBottomOf="@+id/et_graduacion"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_id2"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toTopOf="@+id/et_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />
</androidx.constraintlayout.widget.ConstraintLayout>